src/AniLangParser.java
// Generated from /Users/tluszczyk/dev/JAVA/AGH/semV/MIAK/AniLang/AniLangParser.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AniLangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Open_Parenthesis=1, Close_Parenthesis=2, Open_Bracket=3, Close_Bracket=4, 
		Open_Square_Bracket=5, Close_Square_Bracket=6, Dot=7, Comma=8, Semicolon=9, 
		TypeSeparator=10, Assign=11, ComparationToken=12, Not=13, Plus=14, Minus=15, 
		Star_Slash=16, Power=17, And=18, Or=19, Then=20, End=21, If=22, Else_If=23, 
		Else=24, For=25, While=26, Outer=27, Return=28, Break=29, Continue=30, 
		Print=31, Println=32, CreateScene=33, CreateBox=34, BuildScene=35, Type=36, 
		White_Sign=37, Int=38, Double=39, Number=40, Bool=41, Id=42, Comment=43;
	public static final int
		RULE_program = 0, RULE_id = 1, RULE_atom = 2, RULE_escape_statement = 3, 
		RULE_function_declaration = 4, RULE_function_call = 5, RULE_expr = 6, 
		RULE_expr_1 = 7, RULE_expr_2 = 8, RULE_expr_3 = 9, RULE_expr_4 = 10, RULE_expr_5 = 11, 
		RULE_expr_6 = 12, RULE_expr_7 = 13, RULE_expr_8 = 14, RULE_unary_operator = 15, 
		RULE_declaration_stat = 16, RULE_assignment_stat = 17, RULE_else_stat = 18, 
		RULE_else_if_stat = 19, RULE_if_stat = 20, RULE_for_stat = 21, RULE_while_stat = 22, 
		RULE_print = 23, RULE_println = 24, RULE_createScene = 25, RULE_createBox = 26, 
		RULE_buildScene = 27, RULE_block_stat = 28, RULE_blockless_stat = 29, 
		RULE_stat_with_semicolon = 30, RULE_then = 31, RULE_end = 32, RULE_block = 33;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "id", "atom", "escape_statement", "function_declaration", 
			"function_call", "expr", "expr_1", "expr_2", "expr_3", "expr_4", "expr_5", 
			"expr_6", "expr_7", "expr_8", "unary_operator", "declaration_stat", "assignment_stat", 
			"else_stat", "else_if_stat", "if_stat", "for_stat", "while_stat", "print", 
			"println", "createScene", "createBox", "buildScene", "block_stat", "blockless_stat", 
			"stat_with_semicolon", "then", "end", "block"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'{'", "'}'", "'['", "']'", "'.'", "','", "';'", 
			"'::'", "'='", null, "'!'", "'+'", "'-'", null, "'**'", "'and'", "'or'", 
			"'then'", "'end'", "'if'", "'else if'", "'else'", "'for'", "'while'", 
			"'outer'", "'return'", "'break'", "'continue'", "'print'", "'println'", 
			"'createScene'", "'createBox'", "'buildScene'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "Open_Parenthesis", "Close_Parenthesis", "Open_Bracket", "Close_Bracket", 
			"Open_Square_Bracket", "Close_Square_Bracket", "Dot", "Comma", "Semicolon", 
			"TypeSeparator", "Assign", "ComparationToken", "Not", "Plus", "Minus", 
			"Star_Slash", "Power", "And", "Or", "Then", "End", "If", "Else_If", "Else", 
			"For", "While", "Outer", "Return", "Break", "Continue", "Print", "Println", 
			"CreateScene", "CreateBox", "BuildScene", "Type", "White_Sign", "Int", 
			"Double", "Number", "Bool", "Id", "Comment"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AniLangParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AniLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public List<Block_statContext> block_stat() {
			return getRuleContexts(Block_statContext.class);
		}
		public Block_statContext block_stat(int i) {
			return getRuleContext(Block_statContext.class,i);
		}
		public List<Stat_with_semicolonContext> stat_with_semicolon() {
			return getRuleContexts(Stat_with_semicolonContext.class);
		}
		public Stat_with_semicolonContext stat_with_semicolon(int i) {
			return getRuleContext(Stat_with_semicolonContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AniLangParserListener ) ((AniLangParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AniLangParserListener ) ((AniLangParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AniLangParserVisitor ) return ((AniLangParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << If) | (1L << For) | (1L << While) | (1L << Outer) | (1L << Return) | (1L << Break) | (1L << Continue) | (1L << Print) | (1L << Println) | (1L << CreateScene) | (1L << CreateBox) | (1L << BuildScene) | (1L << Type) | (1L << Id))) != 0)) {
				{
				setState(70);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(68);
					block_stat();
					}
					break;
				case 2:
					{
					setState(69);
					stat_with_semicolon();
					}
					break;
				}
				}
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdContext extends ParserRuleContext {
		public TerminalNode Id() { return getToken(AniLangParser.Id, 0); }
		public IdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AniLangParserListener ) ((AniLangParserListener)listener).enterId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AniLangParserListener ) ((AniLangParserListener)listener).exitId(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AniLangParserVisitor ) return ((AniLangParserVisitor<? extends T>)visitor).visitId(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdContext id() throws RecognitionException {
		IdContext _localctx = new IdContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_id);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(Id);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtomContext extends ParserRuleContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode Int() { return getToken(AniLangParser.Int, 0); }
		public TerminalNode Double() { return getToken(AniLangParser.Double, 0); }
		public TerminalNode Bool() { return getToken(AniLangParser.Bool, 0); }
		public AtomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atom; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AniLangParserListener ) ((AniLangParserListener)listener).enterAtom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AniLangParserListener ) ((AniLangParserListener)listener).exitAtom(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AniLangParserVisitor ) return ((AniLangParserVisitor<? extends T>)visitor).visitAtom(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AtomContext atom() throws RecognitionException {
		AtomContext _localctx = new AtomContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_atom);
		try {
			setState(81);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Id:
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				id();
				}
				break;
			case Int:
				enterOuterAlt(_localctx, 2);
				{
				setState(78);
				match(Int);
				}
				break;
			case Double:
				enterOuterAlt(_localctx, 3);
				{
				setState(79);
				match(Double);
				}
				break;
			case Bool:
				enterOuterAlt(_localctx, 4);
				{
				setState(80);
				match(Bool);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Escape_statementContext extends ParserRuleContext {
		public Escape_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_escape_statement; }
	 
		public Escape_statementContext() { }
		public void copyFrom(Escape_statementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ReturnStatContext extends Escape_statementContext {
		public TerminalNode Return() { return getToken(AniLangParser.Return, 0); }
		public ReturnStatContext(Escape_statementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AniLangParserListener ) ((AniLangParserListener)listener).enterReturnStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AniLangParserListener ) ((AniLangParserListener)listener).exitReturnStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AniLangParserVisitor ) return ((AniLangParserVisitor<? extends T>)visitor).visitReturnStat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BreakStatContext extends Escape_statementContext {
		public TerminalNode Break() { return getToken(AniLangParser.Break, 0); }
		public BreakStatContext(Escape_statementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AniLangParserListener ) ((AniLangParserListener)listener).enterBreakStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AniLangParserListener ) ((AniLangParserListener)listener).exitBreakStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AniLangParserVisitor ) return ((AniLangParserVisitor<? extends T>)visitor).visitBreakStat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ContinueStatContext extends Escape_statementContext {
		public TerminalNode Continue() { return getToken(AniLangParser.Continue, 0); }
		public ContinueStatContext(Escape_statementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AniLangParserListener ) ((AniLangParserListener)listener).enterContinueStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AniLangParserListener ) ((AniLangParserListener)listener).exitContinueStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AniLangParserVisitor ) return ((AniLangParserVisitor<? extends T>)visitor).visitContinueStat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ReturnValueStatContext extends Escape_statementContext {
		public TerminalNode Return() { return getToken(AniLangParser.Return, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ReturnValueStatContext(Escape_statementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AniLangParserListener ) ((AniLangParserListener)listener).enterReturnValueStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AniLangParserListener ) ((AniLangParserListener)listener).exitReturnValueStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AniLangParserVisitor ) return ((AniLangParserVisitor<? extends T>)visitor).visitReturnValueStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Escape_statementContext escape_statement() throws RecognitionException {
		Escape_statementContext _localctx = new Escape_statementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_escape_statement);
		try {
			setState(88);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new BreakStatContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(83);
				match(Break);
				}
				break;
			case 2:
				_localctx = new ReturnStatContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(84);
				match(Return);
				}
				break;
			case 3:
				_localctx = new ReturnValueStatContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(85);
				match(Return);
				setState(86);
				expr();
				}
				break;
			case 4:
				_localctx = new ContinueStatContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(87);
				match(Continue);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_declarationContext extends ParserRuleContext {
		public List<TerminalNode> Type() { return getTokens(AniLangParser.Type); }
		public TerminalNode Type(int i) {
			return getToken(AniLangParser.Type, i);
		}
		public List<TerminalNode> TypeSeparator() { return getTokens(AniLangParser.TypeSeparator); }
		public TerminalNode TypeSeparator(int i) {
			return getToken(AniLangParser.TypeSeparator, i);
		}
		public List<TerminalNode> Id() { return getTokens(AniLangParser.Id); }
		public TerminalNode Id(int i) {
			return getToken(AniLangParser.Id, i);
		}
		public TerminalNode Open_Parenthesis() { return getToken(AniLangParser.Open_Parenthesis, 0); }
		public TerminalNode Close_Parenthesis() { return getToken(AniLangParser.Close_Parenthesis, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public List<TerminalNode> Comma() { return getTokens(AniLangParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(AniLangParser.Comma, i);
		}
		public Function_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AniLangParserListener ) ((AniLangParserListener)listener).enterFunction_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AniLangParserListener ) ((AniLangParserListener)listener).exitFunction_declaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AniLangParserVisitor ) return ((AniLangParserVisitor<? extends T>)visitor).visitFunction_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Function_declarationContext function_declaration() throws RecognitionException {
		Function_declarationContext _localctx = new Function_declarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_function_declaration);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(Type);
			setState(91);
			match(TypeSeparator);
			setState(92);
			match(Id);
			setState(93);
			match(Open_Parenthesis);
			setState(110);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				}
				break;
			case 2:
				{
				{
				setState(95);
				match(Type);
				setState(96);
				match(TypeSeparator);
				setState(97);
				match(Id);
				}
				}
				break;
			case 3:
				{
				setState(104);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(98);
						match(Type);
						setState(99);
						match(TypeSeparator);
						setState(100);
						match(Id);
						setState(101);
						match(Comma);
						}
						} 
					}
					setState(106);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				}
				{
				setState(107);
				match(Type);
				setState(108);
				match(TypeSeparator);
				setState(109);
				match(Id);
				}
				}
				break;
			}
			setState(112);
			match(Close_Parenthesis);
			setState(113);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_callContext extends ParserRuleContext {
		public TerminalNode Id() { return getToken(AniLangParser.Id, 0); }
		public TerminalNode Open_Parenthesis() { return getToken(AniLangParser.Open_Parenthesis, 0); }
		public TerminalNode Close_Parenthesis() { return getToken(AniLangParser.Close_Parenthesis, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> Comma() { return getTokens(AniLangParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(AniLangParser.Comma, i);
		}
		public Function_callContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_call; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AniLangParserListener ) ((AniLangParserListener)listener).enterFunction_call(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AniLangParserListener ) ((AniLangParserListener)listener).exitFunction_call(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AniLangParserVisitor ) return ((AniLangParserVisitor<? extends T>)visitor).visitFunction_call(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Function_callContext function_call() throws RecognitionException {
		Function_callContext _localctx = new Function_callContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_function_call);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(Id);
			setState(116);
			match(Open_Parenthesis);
			setState(128);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				}
				break;
			case 2:
				{
				{
				setState(118);
				expr();
				}
				}
				break;
			case 3:
				{
				setState(124);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(119);
						expr();
						setState(120);
						match(Comma);
						}
						} 
					}
					setState(126);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				}
				{
				setState(127);
				expr();
				}
				}
				break;
			}
			setState(130);
			match(Close_Parenthesis);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public List<Expr_1Context> expr_1() {
			return getRuleContexts(Expr_1Context.class);
		}
		public Expr_1Context expr_1(int i) {
			return getRuleContext(Expr_1Context.class,i);
		}
		public List<TerminalNode> Or() { return getTokens(AniLangParser.Or); }
		public TerminalNode Or(int i) {
			return getToken(AniLangParser.Or, i);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AniLangParserListener ) ((AniLangParserListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AniLangParserListener ) ((AniLangParserListener)listener).exitExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AniLangParserVisitor ) return ((AniLangParserVisitor<? extends T>)visitor).visitExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_expr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			expr_1();
			setState(137);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Or) {
				{
				{
				setState(133);
				match(Or);
				setState(134);
				expr_1();
				}
				}
				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr_1Context extends ParserRuleContext {
		public List<Expr_2Context> expr_2() {
			return getRuleContexts(Expr_2Context.class);
		}
		public Expr_2Context expr_2(int i) {
			return getRuleContext(Expr_2Context.class,i);
		}
		public List<TerminalNode> And() { return getTokens(AniLangParser.And); }
		public TerminalNode And(int i) {
			return getToken(AniLangParser.And, i);
		}
		public Expr_1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr_1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AniLangParserListener ) ((AniLangParserListener)listener).enterExpr_1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AniLangParserListener ) ((AniLangParserListener)listener).exitExpr_1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AniLangParserVisitor ) return ((AniLangParserVisitor<? extends T>)visitor).visitExpr_1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Expr_1Context expr_1() throws RecognitionException {
		Expr_1Context _localctx = new Expr_1Context(_ctx, getState());
		enterRule(_localctx, 14, RULE_expr_1);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			expr_2();
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==And) {
				{
				{
				setState(141);
				match(And);
				setState(142);
				expr_2();
				}
				}
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr_2Context extends ParserRuleContext {
		public List<Expr_3Context> expr_3() {
			return getRuleContexts(Expr_3Context.class);
		}
		public Expr_3Context expr_3(int i) {
			return getRuleContext(Expr_3Context.class,i);
		}
		public TerminalNode ComparationToken() { return getToken(AniLangParser.ComparationToken, 0); }
		public Expr_2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr_2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AniLangParserListener ) ((AniLangParserListener)listener).enterExpr_2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AniLangParserListener ) ((AniLangParserListener)listener).exitExpr_2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AniLangParserVisitor ) return ((AniLangParserVisitor<? extends T>)visitor).visitExpr_2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Expr_2Context expr_2() throws RecognitionException {
		Expr_2Context _localctx = new Expr_2Context(_ctx, getState());
		enterRule(_localctx, 16, RULE_expr_2);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			expr_3();
			setState(151);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ComparationToken) {
				{
				setState(149);
				match(ComparationToken);
				setState(150);
				expr_3();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr_3Context extends ParserRuleContext {
		public List<Expr_4Context> expr_4() {
			return getRuleContexts(Expr_4Context.class);
		}
		public Expr_4Context expr_4(int i) {
			return getRuleContext(Expr_4Context.class,i);
		}
		public List<TerminalNode> Minus() { return getTokens(AniLangParser.Minus); }
		public TerminalNode Minus(int i) {
			return getToken(AniLangParser.Minus, i);
		}
		public Expr_3Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr_3; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AniLangParserListener ) ((AniLangParserListener)listener).enterExpr_3(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AniLangParserListener ) ((AniLangParserListener)listener).exitExpr_3(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AniLangParserVisitor ) return ((AniLangParserVisitor<? extends T>)visitor).visitExpr_3(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Expr_3Context expr_3() throws RecognitionException {
		Expr_3Context _localctx = new Expr_3Context(_ctx, getState());
		enterRule(_localctx, 18, RULE_expr_3);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			expr_4();
			setState(158);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Minus) {
				{
				{
				setState(154);
				match(Minus);
				setState(155);
				expr_4();
				}
				}
				setState(160);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
